[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/portal_start.png" type="Texture" id=1]
[ext_resource path="res://Player/Player_Container.gd" type="Script" id=2]
[ext_resource path="res://Assets/portal_end.png" type="Texture" id=3]
[ext_resource path="res://Levels/Exit.gd" type="Script" id=4]
[ext_resource path="res://Levels/Camera.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Tiles.png" type="Texture" id=6]
[ext_resource path="res://Levels/Spawn.gd" type="Script" id=7]
[ext_resource path="res://Coin/Coin.tscn" type="PackedScene" id=8]
[ext_resource path="res://UI/UI.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/layer_01_1920 x 1080.png" type="Texture" id=10]
[ext_resource path="res://Assets/layer_02_1920 x 1080.png" type="Texture" id=11]
[ext_resource path="res://Coin/Coin_Container.gd" type="Script" id=12]
[ext_resource path="res://Enemy/Enemy_Container.gd" type="Script" id=13]
[ext_resource path="res://Enemy/Enemy_Ground.tscn" type="PackedScene" id=14]

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="TileSet" id=3]
0/name = "Tiles.png 0"
0/texture = ExtResource( 6 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 128, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 2 )
0/shape_one_way = true
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="TileSet" id=5]
0/name = "Tiles.png 0"
0/texture = ExtResource( 6 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 96, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 4 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="Game" type="Node2D"]
position = Vector2( 18, 45 )

[node name="Platform" type="TileMap" parent="."]
tile_set = SubResource( 3 )
collision_friction = 0.0
collision_layer = 2
format = 1
tile_data = PoolIntArray( 524291, 0, 0 )

[node name="Ground" type="TileMap" parent="."]
tile_set = SubResource( 5 )
collision_layer = 2
collision_mask = 5
format = 1
tile_data = PoolIntArray( -65471, 0, 0, -65470, 0, 0, -65469, 0, 0, -65468, 0, 0, -65467, 0, 0, -65466, 0, 0, -65465, 0, 0, -65464, 0, 0, -65463, 0, 0, -65462, 0, 0, -65461, 0, 0, -65460, 0, 0, 65, 0, 0, 72, 0, 0, 76, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65601, 0, 0, 65608, 0, 0, 65612, 0, 0, 131072, 0, 0, 131078, 0, 0, 131132, 0, 0, 131133, 0, 0, 131134, 0, 0, 131135, 0, 0, 131136, 0, 0, 131137, 0, 0, 131141, 0, 0, 131142, 0, 0, 131144, 0, 0, 131148, 0, 0, 196608, 0, 0, 196614, 0, 0, 196668, 0, 0, 196673, 0, 0, 196674, 0, 0, 196678, 0, 0, 196680, 0, 0, 196684, 0, 0, 262144, 0, 0, 262150, 0, 0, 262204, 0, 0, 262209, 0, 0, 262214, 0, 0, 262216, 0, 0, 262218, 0, 0, 262219, 0, 0, 262220, 0, 0, 327680, 0, 0, 327686, 0, 0, 327740, 0, 0, 327745, 0, 0, 327749, 0, 0, 327750, 0, 0, 327752, 0, 0, 327756, 0, 0, 393216, 0, 0, 393222, 0, 0, 393276, 0, 0, 393280, 0, 0, 393281, 0, 0, 393282, 0, 0, 393286, 0, 0, 393288, 0, 0, 393289, 0, 0, 393292, 0, 0, 458752, 0, 0, 458758, 0, 0, 458812, 0, 0, 458813, 0, 0, 458817, 0, 0, 458820, 0, 0, 458822, 0, 0, 458828, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524294, 0, 0, 524348, 0, 0, 524353, 0, 0, 524358, 0, 0, 524363, 0, 0, 524364, 0, 0, 589828, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 589847, 0, 0, 589848, 0, 0, 589849, 0, 0, 589850, 0, 0, 589851, 0, 0, 589852, 0, 0, 589853, 0, 0, 589854, 0, 0, 589855, 0, 0, 589856, 0, 0, 589857, 0, 0, 589858, 0, 0, 589859, 0, 0, 589860, 0, 0, 589861, 0, 0, 589862, 0, 0, 589863, 0, 0, 589864, 0, 0, 589865, 0, 0, 589866, 0, 0, 589867, 0, 0, 589868, 0, 0, 589869, 0, 0, 589870, 0, 0, 589871, 0, 0, 589872, 0, 0, 589873, 0, 0, 589874, 0, 0, 589875, 0, 0, 589876, 0, 0, 589877, 0, 0, 589878, 0, 0, 589879, 0, 0, 589880, 0, 0, 589881, 0, 0, 589882, 0, 0, 589883, 0, 0, 589884, 0, 0, 589888, 0, 0, 589889, 0, 0, 589890, 0, 0, 589894, 0, 0, 589895, 0, 0, 589896, 0, 0, 589897, 0, 0, 589898, 0, 0, 589899, 0, 0, 589900, 0, 0, 655364, 0, 0, 655366, 0, 0, 655420, 0, 0, 655421, 0, 0, 655427, 0, 0, 655433, 0, 0, 720900, 0, 0, 720902, 0, 0, 720956, 0, 0, 720958, 0, 0, 720964, 0, 0, 720969, 0, 0, 786436, 0, 0, 786438, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786452, 0, 0, 786455, 0, 0, 786458, 0, 0, 786492, 0, 0, 786496, 0, 0, 786501, 0, 0, 786505, 0, 0, 851972, 0, 0, 851974, 0, 0, 851983, 0, 0, 851985, 0, 0, 852028, 0, 0, 852033, 0, 0, 852041, 0, 0, 917508, 0, 0, 917510, 0, 0, 917514, 0, 0, 917521, 0, 0, 917564, 0, 0, 917571, 0, 0, 917574, 0, 0, 917575, 0, 0, 917576, 0, 0, 917577, 0, 0, 983044, 0, 0, 983046, 0, 0, 983047, 0, 0, 983050, 0, 0, 983055, 0, 0, 983067, 0, 0, 983100, 0, 0, 983109, 0, 0, 983113, 0, 0, 1048580, 0, 0, 1048582, 0, 0, 1048586, 0, 0, 1048587, 0, 0, 1048588, 0, 0, 1048589, 0, 0, 1048590, 0, 0, 1048591, 0, 0, 1048592, 0, 0, 1048612, 0, 0, 1048636, 0, 0, 1048644, 0, 0, 1048649, 0, 0, 1114116, 0, 0, 1114118, 0, 0, 1114121, 0, 0, 1114128, 0, 0, 1114137, 0, 0, 1114142, 0, 0, 1114146, 0, 0, 1114151, 0, 0, 1114172, 0, 0, 1114177, 0, 0, 1114178, 0, 0, 1114179, 0, 0, 1114185, 0, 0, 1179652, 0, 0, 1179654, 0, 0, 1179655, 0, 0, 1179664, 0, 0, 1179709, 0, 0, 1179710, 0, 0, 1179721, 0, 0, 1245188, 0, 0, 1245190, 0, 0, 1245200, 0, 0, 1245207, 0, 0, 1245248, 0, 0, 1245249, 0, 0, 1245257, 0, 0, 1310724, 0, 0, 1310726, 0, 0, 1310728, 0, 0, 1310736, 0, 0, 1310737, 0, 0, 1310738, 0, 0, 1310739, 0, 0, 1310740, 0, 0, 1310757, 0, 0, 1310761, 0, 0, 1310762, 0, 0, 1310763, 0, 0, 1310764, 0, 0, 1310765, 0, 0, 1310793, 0, 0, 1376260, 0, 0, 1376262, 0, 0, 1376263, 0, 0, 1376264, 0, 0, 1376265, 0, 0, 1376266, 0, 0, 1376267, 0, 0, 1376268, 0, 0, 1376272, 0, 0, 1376276, 0, 0, 1376294, 0, 0, 1376301, 0, 0, 1376307, 0, 0, 1376308, 0, 0, 1376309, 0, 0, 1376310, 0, 0, 1376311, 0, 0, 1376312, 0, 0, 1376313, 0, 0, 1376314, 0, 0, 1376315, 0, 0, 1376316, 0, 0, 1376317, 0, 0, 1376318, 0, 0, 1376329, 0, 0, 1441796, 0, 0, 1441808, 0, 0, 1441812, 0, 0, 1441813, 0, 0, 1441814, 0, 0, 1441815, 0, 0, 1441831, 0, 0, 1441837, 0, 0, 1441839, 0, 0, 1441840, 0, 0, 1441841, 0, 0, 1441865, 0, 0, 1507332, 0, 0, 1507343, 0, 0, 1507353, 0, 0, 1507354, 0, 0, 1507355, 0, 0, 1507356, 0, 0, 1507357, 0, 0, 1507368, 0, 0, 1507373, 0, 0, 1507401, 0, 0, 1572868, 0, 0, 1572879, 0, 0, 1572893, 0, 0, 1572906, 0, 0, 1572909, 0, 0, 1572937, 0, 0, 1638404, 0, 0, 1638405, 0, 0, 1638406, 0, 0, 1638407, 0, 0, 1638408, 0, 0, 1638409, 0, 0, 1638410, 0, 0, 1638411, 0, 0, 1638412, 0, 0, 1638413, 0, 0, 1638414, 0, 0, 1638415, 0, 0, 1638429, 0, 0, 1638444, 0, 0, 1638445, 0, 0, 1638473, 0, 0, 1703965, 0, 0, 1703973, 0, 0, 1703981, 0, 0, 1704009, 0, 0, 1769502, 0, 0, 1769503, 0, 0, 1769504, 0, 0, 1769505, 0, 0, 1769506, 0, 0, 1769507, 0, 0, 1769508, 0, 0, 1769509, 0, 0, 1769510, 0, 0, 1769511, 0, 0, 1769512, 0, 0, 1769513, 0, 0, 1769514, 0, 0, 1769515, 0, 0, 1769516, 0, 0, 1769517, 0, 0, 1769545, 0, 0, 1835081, 0, 0, 1900617, 0, 0, 1966153, 0, 0, 2031689, 0, 0 )

[node name="Spawn" type="Node2D" parent="."]
visible = false
position = Vector2( -25, 258 )

[node name="Sprite" type="Sprite" parent="Spawn"]
position = Vector2( 200.778, 201.832 )
texture = ExtResource( 1 )
script = ExtResource( 7 )

[node name="Exit_to_2" type="Area2D" parent="."]
position = Vector2( 1174, -283 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Exit_to_2"]
position = Vector2( 3643.56, 493.357 )
texture = ExtResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Exit_to_2"]
position = Vector2( 3643.56, 493.357 )
polygon = PoolVector2Array( 12, -48.7, 23, -35.7, 23, -32.4, 25, -27.9, 25, 27.1, 22.6, 37, 21, 37, 11.5, 50, -11.6, 50, -23, 35.7, -23, 32.4, -25, 27.9, -25, -26.1, -19.4, -42, -17.8, -42, -10, -49.8, 12, -50 )

[node name="Player_Container" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Enemy_Container" type="Node2D" parent="."]
script = ExtResource( 13 )

[node name="Enemy_Ground" parent="Enemy_Container" instance=ExtResource( 14 )]
position = Vector2( 2126, 1696 )

[node name="Enemy_Ground2" parent="Enemy_Container" instance=ExtResource( 14 )]
position = Vector2( 2603, 1696 )

[node name="Enemy_Ground3" parent="Enemy_Container" instance=ExtResource( 14 )]
position = Vector2( 797, 1568 )

[node name="Enemy_Ground4" parent="Enemy_Container" instance=ExtResource( 14 )]
position = Vector2( 736, 993 )

[node name="Enemy_Ground5" parent="Enemy_Container" instance=ExtResource( 14 )]
position = Vector2( 4666, 544 )

[node name="Coin_Container" type="Node2D" parent="."]
script = ExtResource( 12 )

[node name="Coin" parent="Coin_Container" instance=ExtResource( 8 )]
position = Vector2( 1706, 733 )

[node name="Coin2" parent="Coin_Container" instance=ExtResource( 8 )]
position = Vector2( 2403, 1632 )

[node name="Coin3" parent="Coin_Container" instance=ExtResource( 8 )]
position = Vector2( 609, 1580 )

[node name="Coin4" parent="Coin_Container" instance=ExtResource( 8 )]
position = Vector2( 3937, 209 )

[node name="Coin5" parent="Coin_Container" instance=ExtResource( 8 )]
position = Vector2( 1765, 949 )

[node name="Camera" parent="." instance=ExtResource( 5 )]
process_mode = 0
limit_right = 4950
limit_bottom = 2000
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_left = 0.1
drag_margin_top = 0.1
drag_margin_right = 0.1
drag_margin_bottom = 0.1

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 1, -2 )
scale = Vector2( 2.6349, 1.95278 )
texture = ExtResource( 10 )
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( -4, -542 )
scale = Vector2( 2.59001, 1.95926 )
texture = ExtResource( 11 )
centered = false

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="ParallaxLayer5" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="UI" parent="." instance=ExtResource( 9 )]

[connection signal="body_entered" from="Exit_to_2" to="Exit_to_2" method="_on_Exit_body_entered"]
