[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/portal_start.png" type="Texture" id=1]
[ext_resource path="res://Player/Player_Container.gd" type="Script" id=2]
[ext_resource path="res://Assets/portal_end.png" type="Texture" id=3]
[ext_resource path="res://Levels/Exit.gd" type="Script" id=4]
[ext_resource path="res://Levels/Camera.tscn" type="PackedScene" id=5]
[ext_resource path="res://Levels/Spawn.gd" type="Script" id=6]
[ext_resource path="res://Assets/Tiles.png" type="Texture" id=7]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="TileSet" id=2]
0/name = "Tiles.png 0"
0/texture = ExtResource( 7 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 256, 384, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "Tiles.png 1"
1/texture = ExtResource( 7 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 128, 384, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 3 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[node name="Game" type="Node2D"]

[node name="Background" type="TileMap" parent="."]
modulate = Color( 0.501961, 0.501961, 0.501961, 1 )
collision_layer = 0
collision_mask = 0
format = 1

[node name="Spawn" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Spawn"]
position = Vector2( 200.778, 201.832 )
texture = ExtResource( 1 )
script = ExtResource( 6 )

[node name="Exit_to_4" type="Area2D" parent="."]
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Exit_to_4"]
position = Vector2( 3643.56, 493.357 )
texture = ExtResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Exit_to_4"]
position = Vector2( 3643.56, 493.357 )
polygon = PoolVector2Array( 12, -48.7, 23, -35.7, 23, -32.4, 25, -27.9, 25, 27.1, 22.6, 37, 21, 37, 11.5, 50, -11.6, 50, -23, 35.7, -23, 32.4, -25, 27.9, -25, -26.1, -19.4, -42, -17.8, -42, -10, -49.8, 12, -50 )

[node name="Player_Container" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Backup_Camera" type="Camera2D" parent="Player_Container"]
position = Vector2( 200, 200 )
limit_left = 0
limit_right = 3760
limit_bottom = 600

[node name="Enemy_Container" type="Node2D" parent="."]

[node name="Platform" type="TileMap" parent="."]
tile_set = SubResource( 2 )
collision_friction = 0.0
format = 1
tile_data = PoolIntArray( 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 196620, 1, 0, 196621, 1, 0, 196622, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 327694, 1, 0, 327695, 1, 0, 327696, 1, 0, 327697, 1, 0, 327698, 1, 0, 524306, 1, 0, 524307, 1, 0, 524308, 1, 0, 524309, 1, 0, 524310, 1, 0, 524311, 1, 0, 524312, 1, 0, 524313, 1, 0, 524314, 1, 0, 524317, 1, 0, 524318, 1, 0, 524319, 1, 0, 524322, 1, 0, 524323, 1, 0, 524324, 1, 0, 524325, 1, 0, 524326, 1, 0, 589870, 1, 0, 589871, 1, 0, 589872, 1, 0, 589873, 1, 0, 589874, 1, 0, 589875, 1, 0, 589876, 1, 0, 589877, 1, 0, 589878, 1, 0, 589879, 1, 0, 589880, 1, 0, 589881, 1, 0, 655400, 1, 0, 655401, 1, 0, 655402, 1, 0, 655403, 1, 0, 655404, 1, 0, 655405, 1, 0 )

[node name="Foreground" type="TileMap" parent="."]
collision_friction = 0.0
collision_layer = 0
collision_mask = 2147483648
format = 1

[node name="Camera" parent="." instance=ExtResource( 5 )]
process_mode = 0

[connection signal="body_entered" from="Exit_to_4" to="Exit_to_4" method="_on_Exit_body_entered"]
